fix(css): Sidebar no longer causes rest of page content to jump.

--- a/packages/web-app/src/style/_navigation.scss
+++ b/packages/web-app/src/style/_navigation.scss
@@ -107,3 +107,45 @@
     @apply flex justify-between items-center px-4 py-3;
   }
 }
+
+.w3-sidebar {
+  height: 100%;
+  width: 200px;
+  background-color: #fff;
+  position: fixed !important;
+  z-index: 1;
+  overflow: auto;
+}
+
+.w3-collapse {
+  display: block !important;
+}
+
+.w3-animate-left {
+  position: relative;
+  animation: animateleft 0.4s;
+}
+
+@keyframes animateleft {
+  from {
+    left: -300px;
+    opacity: 0;
+  }
+  to {
+    left: 0;
+    opacity: 1;
+  }
+}
+
+@media (max-width: 992px) {
+  .w3-sidebar.w3-collapse {
+    display: none;
+  }
+  .w3-main {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+  .w3-auto {
+    max-width: 100%;
+  }
+}
