--- a/packages/web-app/src/style/_utilities.scss
+++ b/packages/web-app/src/style/_utilities.scss
@@ -8,7 +8,7 @@
 }
 
 .search-bar {
-  @apply my-5 shadow appearance-none border bg-white rounded w-full py-2 px-3 text-gray-700 leading-tight;
+  @apply my-5 shadow appearance-none border flex bg-white rounded w-full py-2 px-3 text-gray-700 leading-tight;
 }
 
 .create-bar {
@@ -23,7 +23,6 @@
   @apply text-left font-medium text-sm text-deep-space-sparkle py-2 border-b border-gray-300;
 }
 
-// Media Queries
 @screen md {
   .create-bar {
     @apply flex flex-row justify-between;
